# facenet-ros

./: package.xml  requirements.txt
src/: facenet_node.py
