<?xml version="1.0"?>
<package>
  <name>facenet</name>
  <version>0.0.1</version>
  <description>FaceNet face recognition</description>
  <maintainer email="csyang6052@gmail.com">CS Yang</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/csyang6052/facenet-ros</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
